Editering till index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mitt Projekt</title>
   </head>
   <body>
-    Detta är mitt projekt
+    Detta är mitt projekt.
+    Detta är en ny rad.
   </body>
 </html>
