--- a/login.html
+++ b/login.html
@@ -2,12 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mitt Projekt</title>
+    <title>Login</title>
   </head>
   <body>
-    Detta är mitt projekt.
-    Detta är en ny rad.
-
-    Login Form
+    Login
   </body>
 </html>
